font problem on ios has been solved.

--- a/app/css/font.css
+++ b/app/css/font.css
@@ -9,7 +9,7 @@
   font-family: 'Titillium Web';
   font-style: normal;
   font-weight: 400;
-  src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(../font/font-latin-ext.woff2) format('woff2');
+  src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(../font/font-latin-ext.woff) format('woff');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -17,6 +17,6 @@
   font-family: 'Titillium Web';
   font-style: normal;
   font-weight: 400;
-  src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(../font/font.woff2) format('woff2');
+  src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(../font/font.woff) format('woff');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
